--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,14 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
+      {
+        "src": "/api/*",
+        "dest": "/api/index.js",
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+          "Access-Control-Allow-Headers": "Content-Type, Authorization"
         }
+      }
     ]
-}
+  }
