--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,22 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
-      {
-        "src": "/api/*",
-        "dest": "/api/index.js",
-        "headers": {
+        {
+            "src": "/(.*)",
+            "dest": "index.js",
+            "headers": {
           "Access-Control-Allow-Origin": "*",
           "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
           "Access-Control-Allow-Headers": "Content-Type, Authorization"
         }
-      }
+        
+
+        }
     ]
-  }
+}
