--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,6 +10,7 @@
         {
             "src": "/(.*)",
             "dest": "index.js",
+            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
             "headers": {
           "Access-Control-Allow-Origin": "*",
           "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
